--- a/drools-spring-app/pom.xml
+++ b/drools-spring-app/pom.xml
@@ -67,6 +67,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+		<dependency>
+		    <groupId>org.apache.maven.shared</groupId>
+		    <artifactId>maven-invoker</artifactId>
+		    <version>3.2.0</version>
+		</dependency>
         
     </dependencies>
 
