--- a/drools-spring-app/pom.xml
+++ b/drools-spring-app/pom.xml
@@ -68,9 +68,18 @@
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>org.apache.maven.shared</groupId>
 		    <artifactId>maven-invoker</artifactId>
 		    <version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.6.0</version>
 		</dependency>
         
     </dependencies>
